[tool.poetry]
name = "responder-hosting"
version = "0.1.0"
description = ""
authors = ["repl.it user <replituser@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.15.0"
aiohttp = "^3.7.4"
aiosqlite = "^0.17.0"
discord = "^1.0.1"
jishaku = "^1.20.0"
discord-py-slash-command = "^1.0.9"
dblpy = "^0.4.0"
discord-components = "^0.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
